FISH-7814 fix policy permissions, derby system permission and environment reading